<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="myCity">Braga</string>
    <string name="app_name">CityRoots</string>
    <string name="app_id">380098872136168</string>
    <string name="tab_home">Home</string>
    <string name="tab_mapnearby">Nearby</string>
    <string name="tab_saved">Saved</string>
    <string name="tab_cities">+Cities</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">CityRoots</string>

    <!-- Menu Strings -->

    <string name="poi">Points of Interest</string>
    <string name="routes">Routes</string>
    <string name="events">Events</string>
    <string name="TPA">Traditional Products  \u0026 Art</string>
    <string name="gastronomy">Food</string>
    <string name="activities">Activities  \u0026 Fun</string>
    <string name="outdoor">Outdoor</string>
    <string name="nightlife">Nightlife</string>
    <string name="hotels">Hotels</string>
    <string name="transport">Transporte</string>
    <string name="afd">Accessibility for Disabled</string>
    <string name="contacts">Useful Contacts</string>

    <!-- ********************** -->

    <string name="title_activity_to_visit">ToVisitActivity</string>
    <string name="title_activity_cidades">CidadesActivity</string>
    <string name="tovisittitle">To Visit information list</string>
    <string name="listcidades">Listar cidade disponíveis</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_simple_map">Simple map</string>
    <string name="loadinglist">Loading list</string>
    <string name="title_activity_nearby_places">Nearby Places</string>
    <string name="title_activity_category">Category</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_listar_eventos">Events</string>
    <string name="title_activity_detalhes_eventos">Detalhes</string>
    <string name="title_activity_detalhes_roteiros">DetalhesRoteiros</string>
    <string name="title_activity_desenho_roteiro">Route</string>

    <!-- POI Description -->

    <string name="name">Nome:</string>
    <string name="description">Description:</string>
    <string name="adress">Address:</string>
    <string name="scheudle">Schedule:</string>
    <string name="price">Price:</string>
    <string name="site">Site:</string>
    <string name="email">E-mail:</string>
    <string name="seemap">View on map</string>
    <string name="comment">Comment</string>
    <string name="search_label">Search</string>
    <string name="title_activity_search">Search</string>
    <string name="deals">Deals</string>
    <string name="title_activity_list_roteiros">Routes</string>
    <string name="nearby">Find Nearby Places</string>

</resources>
