<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@color/gray_android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uminho.uce15.cityroots.Home"
    tools:ignore="MergeRootFrame">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="Find nearby locations"
                android:onClick="clickNearbyLocations"/>

            <LinearLayout
                style="@style/MenuRow"
                android:id="@+id/poi"
                >
                <ImageView
                    style="@style/MenuImage"
                    android:src="@drawable/points_of_interest"/>

                <TextView
                    style="@style/MenuText"
                    android:text="@string/poi"/>

            </LinearLayout>
            <View
                style="@style/MenuLine"
                />
            <LinearLayout
                style="@style/MenuRow"
                android:id="@+id/routes"
                >
                <ImageView
                    style="@style/MenuImage"
                    android:src="@drawable/route"/>
                <TextView
                    style="@style/MenuText"
                    android:text="@string/routes"/>
            </LinearLayout>
            <View
                style="@style/MenuLine"
                />
            <LinearLayout
                style="@style/MenuRow"
                android:id="@+id/events"
                >
                <ImageView
                    style="@style/MenuImage"
                    android:src="@drawable/events"/>
                <TextView
                    style="@style/MenuText"
                    android:text="@string/events"/>
            </LinearLayout>
            <View
                style="@style/MenuLine"
                />
            <LinearLayout
                style="@style/MenuRow"
                android:id="@+id/tpa"
                >
                <ImageView
                    style="@style/MenuImage"
                    android:src="@drawable/points_of_interest"/>
                <TextView
                    style="@style/MenuText"
                    android:text="@string/TPA"/>
            </LinearLayout>
            <View
                style="@style/MenuLine"
                />
            <LinearLayout
                style="@style/MenuRow"
                android:id="@+id/gastronomy"
                >
                <ImageView
                    style="@style/MenuImage"
                    android:src="@drawable/gastronomy"/>
                <TextView
                    style="@style/MenuText"
                    android:text="@string/gastronomy"/>
            </LinearLayout>
            <View
                style="@style/MenuLine"
                />
            <LinearLayout
                style="@style/MenuRow"
                android:id="@+id/activities"
                >
                <ImageView
                    style="@style/MenuImage"
                    android:src="@drawable/activity"/>
                <TextView
                    style="@style/MenuText"
                    android:text="@string/activities"/>
            </LinearLayout>
            <View
                style="@style/MenuLine"
                />
            <LinearLayout
                style="@style/MenuRow"
                android:id="@+id/outdoor"
                >
                <ImageView
                    style="@style/MenuImage"
                    android:src="@drawable/outdoor"/>
                <TextView
                    style="@style/MenuText"
                    android:text="@string/outdoor"/>
            </LinearLayout>
            <View
                style="@style/MenuLine"
                />
            <LinearLayout
                style="@style/MenuRow"
                android:id="@+id/nightlife"
                >
                <ImageView
                    style="@style/MenuImage"
                    android:src="@drawable/nightlife"/>
                <TextView
                    style="@style/MenuText"
                    android:text="@string/nightlife"/>
            </LinearLayout>
            <View
                style="@style/MenuLine"
                />
            <LinearLayout
                style="@style/MenuRow"
                android:id="@+id/hotels"
                >
                <ImageView
                    style="@style/MenuImage"
                    android:src="@drawable/transportes"/>
                <TextView
                    style="@style/MenuText"
                    android:text="@string/hotels"/>
            </LinearLayout>
            <View
                style="@style/MenuLine"
                />
            <LinearLayout
                style="@style/MenuRow"
                android:id="@+id/transport"
                >
                <ImageView
                    style="@style/MenuImage"
                    android:src="@drawable/transportes"/>
                <TextView
                    style="@style/MenuText"
                    android:text="@string/transport"/>
            </LinearLayout>
            <View
                style="@style/MenuLine"
                />
            <LinearLayout
                style="@style/MenuRow"
                android:id="@+id/afd"
                >
                <ImageView
                    style="@style/MenuImage"
                    android:src="@drawable/transportes"/>
                <TextView
                    style="@style/MenuText"
                    android:text="@string/afd"/>
            </LinearLayout>
            <View
                style="@style/MenuLine"
                />
            <LinearLayout
                style="@style/MenuRow"
                android:id="@+id/contacts"
                >
                <ImageView
                    style="@style/MenuImage"
                    android:src="@drawable/contacts"/>
                <TextView
                    style="@style/MenuText"
                    android:text="@string/contacts"/>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</FrameLayout>