<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_android"
    >


    <ScrollView
        android:id="@+id/myScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dip">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/GenericProgressBackground"
                android:id="@+id/loadingPanel"
                >
                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                    <LinearLayout
                        android:id="@+id/mygallery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        />
                </HorizontalScrollView>
                <ProgressBar
                    style="@style/GenericProgressIndicator"
                    android:id="@+id/loadingImg"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"/>
            </RelativeLayout>
            <!--LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/opcao1"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:padding="15dp"
                    android:src="@drawable/common_signin_btn_icon_dark" />


            </LinearLayout-->


            <!-- Name Label -->

            <RatingBar
                android:id="@+id/ratingBar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:focusable="false"
                android:clickable="false"
                android:layout_gravity="center"
                />




            <!-- Description Value -->

            <TextView
                android:textColor="@android:color/primary_text_dark"
                android:id="@+id/description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />



            <!-- Address Label -->

            <TextView
                android:textColor="@android:color/primary_text_dark"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="15dip"
                android:text="@string/adress"
                android:textStyle="bold" />

            <!-- Address Value -->

            <TextView
                android:textColor="@android:color/primary_text_dark"
                android:id="@+id/address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <!-- Schedule Value -->
            <TextView
                android:textColor="@android:color/primary_text_dark"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="10dip"
                android:text="@string/scheudle"
                android:textStyle="bold" />

            <!-- Schedule Value -->

            <TextView
                android:textColor="@android:color/primary_text_dark"
                android:id="@+id/schedule"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <!-- Transport Value -->
            <TextView
                android:textColor="@android:color/primary_text_dark"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="10dip"
                android:text="@string/transport"
                android:textStyle="bold" />

            <!-- Site Value -->



            <TextView
                android:textColor="@android:color/primary_text_dark"
                android:id="@+id/transport"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />



            <!-- Site Value -->
            <TextView
                android:textColor="@android:color/primary_text_dark"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="10dip"
                android:text="@string/site"
                android:textStyle="bold" />

            <!-- Site Value -->

            <TextView
                android:textColor="@android:color/primary_text_dark"
                android:id="@+id/website"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />



            <!-- Email Value -->
            <TextView
                android:textColor="@android:color/primary_text_dark"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="10dip"
                android:text="@string/email"
                android:textStyle="bold" />

            <!-- Email Value -->

            <TextView
                android:textColor="@android:color/primary_text_dark"
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:id="@+id/labels_event"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >
                    <!-- start value -->
                    <TextView
                        android:textColor="@android:color/primary_text_dark"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:layout_marginTop="10dip"
                        android:text="Inicio:"
                        android:textStyle="bold" />

                    <!-- start value -->

                    <TextView
                        android:textColor="@android:color/primary_text_dark"
                        android:id="@+id/event_start"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />

                    <!-- end value -->
                    <TextView
                        android:textColor="@android:color/primary_text_dark"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:layout_marginTop="10dip"
                        android:text="Fim:"
                        android:textStyle="bold" />

                    <!-- end value -->

                    <TextView
                        android:textColor="@android:color/primary_text_dark"
                        android:id="@+id/event_end"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />


                    <!-- org value -->
                    <TextView
                        android:textColor="@android:color/primary_text_dark"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:layout_marginTop="10dip"
                        android:text="Organização:"
                        android:textStyle="bold" />

                    <!-- org value -->

                    <TextView
                        android:textColor="@android:color/primary_text_dark"
                        android:id="@+id/org"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />

                    <!-- Price Value -->
                    <TextView
                        android:textColor="@android:color/primary_text_dark"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:layout_marginTop="10dip"
                        android:text="@string/price"
                        android:textStyle="bold" />
                    <!-- Price Value -->

                    <TextView
                        android:textColor="@android:color/primary_text_dark"
                        android:id="@+id/price"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />

                    <!-- program value -->
                    <TextView
                        android:textColor="@android:color/primary_text_dark"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:layout_marginTop="10dip"
                        android:text="Programação:"
                        android:textStyle="bold" />

                    <!-- program value -->

                    <TextView
                        android:textColor="@android:color/primary_text_dark"
                        android:id="@+id/event_program"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/labels_service"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <!-- details value -->
                    <TextView
                        android:textColor="@android:color/primary_text_dark"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:layout_marginTop="10dip"
                        android:text="Detalhes:"
                        android:textStyle="bold" />

                    <!-- capacity value -->

                    <TextView
                        android:textColor="@android:color/primary_text_dark"
                        android:id="@+id/serv_details"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />

                    <!-- capacity value -->
                    <TextView
                        android:textColor="@android:color/primary_text_dark"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:layout_marginTop="10dip"
                        android:text="Capacidade:"
                        android:textStyle="bold" />

                    <!-- capacity value -->

                    <TextView
                        android:textColor="@android:color/primary_text_dark"
                        android:id="@+id/serv_capacity"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
    <View
        style="@style/MenuLine"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/commentLayout"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight=".1">
        </LinearLayout>
        <EditText
            android:id="@+id/myComment"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight=".8"/>
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight=".1"
            android:background="@drawable/comment_mv"
            android:onClick="doComment"
            android:scaleType="fitStart"/>

    </LinearLayout>
    <RatingBar
        android:id="@+id/comment_ratingBar"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:focusable="true"
        android:clickable="true"
        android:rating="0"
        android:layout_gravity="center"/>
    <ListView
        android:id="@+id/commentList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:visibility="gone"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="View Comments"
        android:onClick="toggleComments"
        android:id="@+id/viewComments" />
</LinearLayout>